--- a/public/index.html
+++ b/public/index.html
@@ -30,24 +30,8 @@
                     const data = await response.json();
                     displayResults(data.results);
 
-                    // Обработка скачивания результатов внутри функции displayResults
-                    document.getElementById('download').onclick = () => {
-                        let textContent = '';
-                        if (data.results && data.results.length > 0) {
-                            data.results.forEach((result, index) => {
-                                textContent += `Result ${index + 1}:\nTitle: ${result.title}\nURL: ${result.url}\nDescription: ${result.description}\n\n`;
-                            });
-                        }
-
-                        // Создаем и скачиваем текстовый файл
-                        const blob = new Blob([textContent], { type: 'text/plain' });
-                        const url = URL.createObjectURL(blob);
-                        const a = document.createElement('a');
-                        a.href = url;
-                        a.download = 'search_results.txt';
-                        a.click();
-                        URL.revokeObjectURL(url);
-                    };
+                    // Выводим JSON в консоль
+                    console.log('JSON data:', data);
                 } catch (error) {
                     console.error('Error fetching search results:', error);
                     displayError('An error occurred while fetching search results.');
